# iot

./: .gitignore  CMakeLists.txt  README.md  run.py  run_experiments.sh
canon_dimna/: CMakeLists.txt  main.cpp
dimna/: main.cpp
libdimna/: CMakeLists.txt
libdimna/allocator/: DiAllocator.mpp  DiRunner.mpp
libdimna/io/: OutputWriter.mpp
libdimna/model/: Times.mpp
libdimna/policy/filter/: CanonFixedFilter.mpp  FixedFilter.mpp  OpenMPFixedFilter.mpp
libdimna/policy/searcher/: FixedSearcher.mpp  OpenMPFixedSearcher.mpp
openmp_dimna/: CMakeLists.txt  main.cpp
openmp_fixed_dimna/: CMakeLists.txt  main.cpp
